# tiny-url

./: Cargo.toml  README.md
config/: Setting.toml  Settings.toml
db/: init.sql  start.sh
src/: main.rs  settings.rs
src/api/: links.rs  mod.rs
templates/: index.html
