[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 配置
config = "0.13.1"
# web框架
actix-web = "4"
# serde 序列化
serde = { version = "1.0.145", features = ["derive"] }
# serde_json
serde_json = { version="1.0.2", optional = true }
# nanoid
nanoid = "0.4.0"
# sqlx
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql"] }
